[package]
name = "supabase-auth"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/levkk/supabase-auth-rs"
authors = ["Lev Kokotov <lev.kokotov@gmail.com>"]
readme = "README.md"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
